<resources xmlns:android="http://schemas.android.com/apk/res/android" xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="app_name">DomySetting</string>
    <string name="manual_add_wifi">Add WiFi manually</string>
    <string name="wifi_share">WiFi share</string>
    <string name="pppoe_connect">Broadband connection</string>
    <string name="eth_title">Wired network</string>
    <string name="eth_dis_title">Wired Network not connected</string>
    <string name="btn_wifi">Wireless network</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="manual_wifi_name">Network</string>
    <string name="manual_wifi_safe">S.Type</string>
    <string name="manual_wifi_password">Password</string>
    <string name="manual_wifi_commit">Commit</string>
    <string name="wifi_security_none">No open password</string>
    <string name="wifi_security_wep">WEP</string>
    <string name="wifi_security_wpa">WPA PSK</string>
    <string name="wifi_security_wpa2">WPA2 PSK</string>
    <string name="wifi_security_wpa_wpa2">WPA/WPA2 PSK</string>
    <string name="wifi_security_psk_generic">@string/wifi_security_wpa_wpa2</string>
    <string name="wifi_security_eap">802.1x EAP</string>
    <string name="wifi_security_short_wep">WEP</string>
    <string name="wifi_security_short_wpa">WPA</string>
    <string name="wifi_security_short_wpa2">WPA2</string>
    <string name="wifi_security_short_wpa_wpa2">WPA/WPA2</string>
    <string name="wifi_security_short_psk_generic">@string/wifi_security_short_wpa_wpa2</string>
    <string name="wifi_security_short_eap">802.1x</string>
    <string name="wifi_disabled_password_failure">"Authentication error"</string>
    <string name="wifi_connected_failed">cannot connect, please try again</string>
    <string name="wifi_fail_to_scan" msgid="1265540342578081461">Failed to scan network</string>
    <string name="wifi_failed_save_message">Failed to save network</string>
    <string name="wifi_failed_forget_message">Failed to forget network</string>
    <string name="wifi_sucess_forget_message">Network forgotten</string>
    <string name="wifi_not_in_range">This network is out of range!</string>
    <string name="wifi_connected_success">\u0020(connected)</string>
    <string name="wifi_password_length_limit">Password requires at least 8 charactersd</string>
    <string name="wifi_password_error1">Password length should be > 0 or ≤ 63 characters</string>
    <string name="wifi_password_error2">Password length should be ≥  8 or ≤ 63 characters</string>
    <string name="wifi_ssid_error">SSID length should be > 0 or ≤ 20 characters</string>
    <string name="wifi_scaning">Scanning&#8230;</string>
    <string name="wifi_password_null">Password can\'t be null！</string>
    <string name="pppoe_connect_commit">Connect</string>
    <string name="pppoe_username">User name</string>
    <string name="pppoe_password">Password</string>
    <string name="pppoe_connect_failed">Broadband dial-up failed</string>
    <string name="pppoe_connect_success">Broadband dial-up successful</string>
    <string name="pppoe_disconnect_failed">Broadband dial-up disconnection failed</string>
    <string name="pppoe_disconnect_ok">Broadband dial-up disconnection successful</string>
    <string name="pppoe_hangup_waiting_msg">Please wait a moment</string>
    <string name="pppoe_connect_timeout">Connect time out</string>
    <string name="pppoe_connect_failed_auth">Invalid username or password</string>
    <string name="pppoe_connect_failed_server_no_response">No response from the server</string>
    <string name="pppoe_disconnect_waiting_msg">Disconnecting, please wait</string>
    <string name="pppoe_connect_waiting_msg">Connecting, please wait</string>
    <string name="pppoe_connecting">Broadband dial-up is in progress </string>
    <string name="pppoe_name_or_psw_is_null">username and password cannot be null</string>
    <string name="pppoe_auto_connect">auto-connect at startup</string>
    <string name="pppoe_state_disconnected">Broadband dial-up is already disconnected. No need to retry. !</string>
    <string name="wifi_share_on">On</string>
    <string name="wifi_share_off">Off</string>
    <string name="wifi_share_security_open">On</string>
    <string name="wifi_share_security_wpa2_psk">WPA2 PSK</string>
    <string name="wifi_share_security_wpa_psk">WPA PSK</string>
    <string name="wifi_share_error_2">network name can not be null！</string>
    <string name="wifi_share_error_1">hotspot failed at start up！</string>
    <string name="wifi_share_start_soft">Submitting data, please wait.</string>
    <string name="wifi_share_open_softap">Turning on. Please wait. </string>
    <string name="wifi_share_close_softap">Turning off. Please wait. </string>
    <string name="wifi_share_open_success">Hotspot on</string>
    <string name="wifi_share_opened">Opened</string>
    <string name="wifi_share_name_too_long">Share name is too long, Please shorten  to less than 20 characters </string>
    <string name="ethernet_name">cable network</string>
    <string name="ethernet_notice">cable network setting</string>
    <string name="ethernet_item_test_speed">Internet speed testing</string>
    <string name="ethernet_item_wifi_share">WiFi share</string>
    <string name="ethernet_item_manual_adjust">Manual adjust</string>
    <string name="ethernet_item_ip_address">IP address</string>
    <string name="ethernet_item_net_mask">Subnet mask</string>
    <string name="ethernet_item_gateway">Gateway</string>
    <string name="ethernet_item_dns">DNS</string>
    <string name="ethernet_item_ipv6">Ipv6</string>
    <string name="ethernet_item_ipv4">Ipv4</string>
    <string name="ethernet_item_disable_net">Forget this network</string>
    <string name="on">Open</string>
    <string name="off">Close</string>
    <string name="ethernet_dis_use_wifi">Turn on WiFi</string>
    <string name="ethernet_dis_use_pppoe">Broadband dial-up network is on</string>
    <string name="ethernet_dis_modify_net">Modify network info</string>
    <string name="ethernet_dis_reconnect">Reconnect</string>
    <string name="ethernet_dis_check_net">Check network</string>
    <string name="ethernet_dis_notice">Network connection failed</string>
    <string name="str_ip_input_type">1234567890.</string>
    <string name="str_ip_no_gateway">IP and gateway are not on the same segment</string>
    <string name="str_ip_address_invalid">Input format error</string>
    <string name="str_ip_max_value">The maximum value should be less than 255</string>
    <string name="str_ip_full_characters">Input characters exceeded limits</string>
    <string name="str_ip_equal_gateway">IP and gateway are equal</string>
    <string name="network_error">Connection to server timed out！</string>
    <string name="please_set_network">Please set up network！</string>
    <string name="wifi_name">WiFi</string>
    <string name="wifi_notice">WiFi settings</string>
    <string name="wifi_manual_add">Add WiFi manually</string>
    <string name="wifi_password_error">Password error</string>
    <string name="test_speed_title">Internet Speed Test</string>
    <string name="test_speed_notice">Device Internet speed test</string>
    <string name="test_speed_unit_converter">1MB/S=8Mb/S</string>
    <string name="test_speed_real_speed">Peak speed:&#160;</string>
    <string name="test_speed_average_speed">Avg. speed:&#160;</string>
    <string name="test_speed_broadband_speed">Estimation:&#160;</string>
    <string name="test_speed_broadband_title_1">Your speed exceeds the other users</string>
    <string name="test_speed_broadband_title_2">Users</string>
    <string name="test_speed_broadband_title_3">Your current network is suitable for</string>
    <string name="test_speed_broadband_level_1">Your current network is not fast enough for…</string>
    <string name="test_speed_broadband_level_1_1">--</string>
    <string name="test_speed_begin_test">Test</string>
    <string name="test_speed_repeat_test">Test</string>
    <string name="test_speed_net_stars">Rating:&#160;</string>
    <string name="test_speed_tv_level">Suitable for:&#160;</string>
    <string name="test_speed_0">0</string>
    <string name="test_speed_00">.00</string>
    <string name="test_speed_bigm_unit">MB/S</string>
    <string name="test_speed_littlem_unit">Mb/S</string>
    <string name="test_speed_per_30">30%</string>
    <string name="test_speed_per_50">50%</string>
    <string name="test_speed_per_70">70%</string>
    <string name="test_speed_per_90">90%</string>
    <string name="test_speed_movie_360p">－－</string>
    <string name="test_speed_movie_720p">720P</string>
    <string name="test_speed_movie_1080p">1080P</string>
    <string name="test_speed_movie_4k">4K</string>
    <string name="test_speed_testing_count">Calculating</string>
    <string name="check_network_title">Check network</string>
    <string name="check_network_title_notice">Checking network connection</string>
    <string name="check_network_connect_success">Network connection successful</string>
    <string name="check_network_connect_failed">Network connection failed</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="cloud_user">Cloud user</string>
    <string name="wendu">35</string>
    <string name="scene">Picture</string>
    <string name="network_setting">Network</string>
    <string name="other_setting">Others</string>
    <string name="about_gen_setting">System</string>
    <string name="about_domy">About</string>
    <string name="about_domy_detail">Damai details</string>
    <string name="title_activity_deviceinfo">DeviceinfoActivity</string>
    <string name="model">Model</string>
    <string name="boxname">Box name</string>
    <string name="firmware">Software version</string>
    <string name="hard_version">Hardware version</string>
    <string name="close">Off</string>
    <string name="information">Information</string>
    <string name="cancel">Cancel</string>
    <string name="display_confirm_msg1">屏幕分辨率已经改变，\n是否保存设置？</string>
    <string name="comfirm">确认</string>
    <string name="AutoPowerDialog_Text1">Detected more than</string>
    <string name="AutoPowerDialog_Text3">Ready to shut down automatically</string>
    <string name="AutoPowerDialog_Text4">Press any button to exit</string>
    <string name="AutoPowerDialog_Text5">You may modify the auto shut down time in system settings.</string>
    <string name="interface_check">Check interface</string>
    <string name="domynetwork">Damai Network Diagnostics Tool</string>
    <string name="netnormaltip">Network connection normal. Please proceed.</string>
    <string name="repair">Repair</string>
    <string name="informationtip">消息提示</string>
    <string name="messagetip">提示消息</string>
    <string name="yestip">Yes</string>
    <string name="testcontent">Detection details</string>
    <string name="untest">Not detected</string>
    <string name="untested">Not diagnosed</string>
    <string name="details">Details</string>
     <string name="starttest">Start</string>
    <string name="domyprotip">We invite you to run a full system test. </string>
   <string name="domyprotip2">Livestream performance test checks access rate and stability.</string>
   <string name="domyprotip3">Launcher performance test troubleshoots image loading and related interface stability.</string>
   <string name="domyprotip4">VOD performance test checks access rate and stability. </string>
   <string name="domyprotip5">Ad performance test checks stability.</string>
   <string name="domyprotip6">Comprehensive e-commerce performance evaluation detects backend interface stability.</string>
   <string name="domyprotip7">Damai system upgrade evaluation evaluates the stability of slient and OTA upgrades.</string>
   <string name="nethardware">Hardware</string>
    <string name="listcontroltip">Check if network cable connecting and work properply.</string>
</resources>