<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="736dp"
    android:layout_height="360dp"
    android:background="@drawable/autopower_dialog"
     >
   
    <TextView 
        android:id="@+id/line1"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="190dp"
        android:layout_marginTop="66dp"
        android:textSize="24sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        android:lineSpacingMultiplier="1.5"
        android:text="@string/AutoPowerDialog_Text1"
        />
    <TextView 
        android:id="@+id/line2"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="190dp"
        android:layout_marginTop="12dp"
        android:textSize="26sp"
        android:layout_below="@+id/line1"
        android:layout_width="wrap_content"
        android:lineSpacingMultiplier="1.5"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        android:text="@string/AutoPowerDialog_Text3"
        />
        <TextView 
        android:id="@+id/line3"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="190dp"
        android:layout_marginTop="28dp"
        android:layout_below="@+id/line2"
        android:textSize="28sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        android:lineSpacingMultiplier="1.5"
        android:text="@string/AutoPowerDialog_Text4"
        />
    <TextView 
        android:id="@+id/line4"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="190dp"
        android:layout_marginTop="22dp"
        android:textSize="@dimen/text_size_30"
        android:layout_below="@+id/line3"
        android:layout_width="wrap_content"
        android:lineSpacingMultiplier="1.5"
        android:layout_height="wrap_content"
        android:textColor="@color/grey6_color"
        android:text="@string/AutoPowerDialog_Text5"
        />
</RelativeLayout>
