<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="554dp"
    android:layout_height="354dp"
    android:background="@drawable/dialog_bg"
    android:orientation="vertical"
    android:paddingBottom="50dp"
    android:paddingLeft="50dp"
    android:paddingRight="50dp"
    android:paddingTop="40dp" >

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:text="@string/information"
        android:textColor="@color/white"
        android:textSize="20sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center_vertical"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:text="@string/display_confirm_msg1" />
         <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:textColor="@color/white"
            android:textSize="20sp"
          />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal" >

        <Button
            android:id="@+id/save_dischange_yes"
            style="@style/domy_display_scop_button_text"
            android:background="@drawable/domy_setting_button_selector"
            android:layout_width="150dp"
            android:layout_height="60dp"
            android:layout_marginTop="50dp"
            android:layout_centerHorizontal="true"
            android:gravity="center"
            
            android:text="@string/comfirm" />

        <Button
            android:id="@+id/save_dischange_no"
           style="@style/domy_display_scop_button_text"
            android:background="@drawable/domy_setting_button_selector"
            android:layout_width="150dp"
            android:layout_height="60dp"
            android:layout_marginTop="50dp"
            android:layout_centerHorizontal="true"
            android:gravity="center"
            android:text="@string/cancel" />
    </LinearLayout>

</LinearLayout>